@@ -1,6 +1,7 @@
 Overview of changes in lightdm 0.3.6
 
     * Allow display vt setting to be set to "active" to start on active VT
+    * Disable Plymouth when starting
     * Fix typo for High Contrast menu item
 
 Overview of changes in lightdm 0.3.5
